# ChangeLog for net-p2p/bitcoind
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.53 2013/01/04 02:26:38 blueness Exp $

*bitcoind-0.7.2 (04 Jan 2013)

  04 Jan 2013; Anthony G. Basile <blueness@gentoo.org> +bitcoind-0.7.2.ebuild:
  Version bump

  14 Dec 2012; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Remove redundant USE=upnp description; it matches the global flag meaning.

*bitcoind-0.6.4_rc4-r1 (06 Dec 2012)
*bitcoind-0.7.2_rc2 (06 Dec 2012)

  06 Dec 2012; Anthony G. Basile <blueness@gentoo.org>
  +bitcoind-0.6.4_rc4-r1.ebuild, +bitcoind-0.7.2_rc2.ebuild,
  -bitcoind-0.6.4_rc3.ebuild, -bitcoind-0.6.4_rc4.ebuild:
  Version bumps

  09 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> bitcoind-0.7.1.ebuild:
  Drop version-specific boost access (leverages boost-1.52.0-r1 which uses
  system layout); this should also make sure that the multithread libraries are
  used, unlike before, with the new layout.

  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bitcoind-0.6.3.ebuild,
  bitcoind-0.6.4_rc3.ebuild, bitcoind-0.7.0.ebuild:
  Workaround for bug #440034

*bitcoind-0.4.8_rc4 (29 Oct 2012)
*bitcoind-0.5.7_rc4 (29 Oct 2012)
*bitcoind-0.7.1 (29 Oct 2012)
*bitcoind-0.6.4_rc4 (29 Oct 2012)
*bitcoind-0.6.0.10_rc4 (29 Oct 2012)

  29 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  +bitcoind-0.4.8_rc4.ebuild, +bitcoind-0.5.7_rc4.ebuild,
  +bitcoind-0.6.0.10_rc4.ebuild, +bitcoind-0.6.4_rc4.ebuild,
  +bitcoind-0.7.1.ebuild:
  Version bumps, bug #435216

  21 Oct 2012; Anthony G. Basile <blueness@gentoo.org> bitcoind-0.6.3.ebuild:
  stable arm, bug #429188

*bitcoind-0.7.0 (08 Oct 2012)
*bitcoind-0.6.4_rc3 (08 Oct 2012)
*bitcoind-0.6.0.10_rc3 (08 Oct 2012)
*bitcoind-0.5.7_rc3 (08 Oct 2012)
*bitcoind-0.4.8_rc3 (08 Oct 2012)

  08 Oct 2012; Anthony G. Basile <blueness@gentoo.org> -bitcoind-0.4.7.ebuild,
  -bitcoind-0.4.8_rc1.ebuild, -bitcoind-0.4.8_rc2.ebuild,