@@ -41,26 +41,26 @@ EBUILD bitcoind-0.6.0.10_rc3.ebuild 2920 SHA256 9a301188434e6518518e6d4d0b92e549
 EBUILD bitcoind-0.6.0.10_rc4.ebuild 2920 SHA256 a7293192984a3ad9b16b43bd12cb2d381ff7d84af228973e603a2035e905c08a SHA512 bf3dcc7d252bf03ecfae51ac2fc1e83042e263a4ecfd25edb0074e158521fa17b6339ef1af613b23a5688a735a9304609de48468d1db45a7383c923d70d20841 WHIRLPOOL ce16681219e02148699f28e945b3f9cfadf2116f437fcb4e1e51b09bb2405a0c3ea5070ff875900b22b3d2c711c19bddd7d6b4c32f97ed8abca9920f0876e185
 EBUILD bitcoind-0.6.3.ebuild 3073 SHA256 7d3b08af71adc4c2ed79d0ad883620f8001e3a6328b43cdd8bdfd09e4802de86 SHA512 ce212d0098a5c0407d41cd06c0a01252d93f9a005e7d0cc4ca464fdbb0e5b871d099ed53d58756a07d760b11503eca42983bc59675b32c258c635491c05617c0 WHIRLPOOL 6e318886033b2dd652faf19255e53d5a8f3128f3af94012027dfff67ecc861d26177244c144ca6d0506fe027d42896c0400c0f06958ece571542efc30e69cc29
 EBUILD bitcoind-0.6.4_rc4-r1.ebuild 3095 SHA256 b7f856dccdfe0f27a2e5ab35de992cc5e663fc7bf94a939d2a9c94e06e80d138 SHA512 fd8c347274d282be9b8850521c32b1364c8d1dd0f17ad52f5dd4d7dfe5d5877fa42df6ed8d523a52100c65d671d5d0dddbbc76d9ad8f37bbf3d1b10eaf9fae94 WHIRLPOOL 6d04f771f93d82358251490243b1a9cc8cdd5e8395bc2fb1203e5414ae8934fde3e0adb3876b708638f70011a9e7beae2c23fac6d37f7e0af9db866f9cd55979
-EBUILD bitcoind-0.7.0.ebuild 2914 SHA256 ff538db1ce6183d92556b572a8d4f868c95086f3aa2d2b5048629c0ac837281d SHA512 48c4e189b595ab956e1127e1d6a2c67129708b7519e79047e31e3c417030e4f160d5892b85aba6cafc725f0908a59eb00f39ddac2ba2f91e4063ce15f3832e2c WHIRLPOOL 297bc8fef9e2917d321e7fdb0848f4e40b9558456217060dd890e4fd45561ed193ff8de049e1c2b8af670f21349ea39df49f51369724aacc30470925572b2ff1
+EBUILD bitcoind-0.7.0.ebuild 2576 SHA256 794d4df38523abd9b2637fd6a751e391cfd38ff4154f3dcac3d56e760d7027d8 SHA512 943b296c753b5cc9c349c0f85f74021d9bf2a67ae6ebac20a799e7290a0e02bf451ed7317d56fc2037fb2198a4d4b4a1238a6448c4a46e7731da131a293ae38f WHIRLPOOL ed5012941b623840e029cfc08521ac3a524cfa6184c7b4a8437c4dad0542a743979badabb2e82c56e2d33979a78470aba134d947be975c079e9f6e67032c5ad1
 EBUILD bitcoind-0.7.1.ebuild 2577 SHA256 87ce8ff8950ad01cc35588d6b9220d7220901175e353af99c4f7ab3b68c655ec SHA512 5aaf50cb7b9afb55e402564d78075c7f7335da7991bc2554d1be79eae2218278d4f5359ffc94b682f5e9e768f0b4aff92a9a875096844812e56ae12950cc288d WHIRLPOOL e157fb52bfdd8433eb86545a674a157d7913dceea462782531777fc6d704d15f69d08d0e537a3780b9ffc5e3a2924a623bf772c48c8b077c2ad7c1aa50f1ee95
-EBUILD bitcoind-0.7.2.ebuild 2908 SHA256 af12f26677faeb3ef982fc763c2379da0db1cc1095cc6ca3f61b661eae4f12e3 SHA512 4fbaf8d673ca9d998aa6dfd17ef890ac5756554aedc017907894c88f7f153e1777622e8729bebe25672183ae87395e8362fb1007716f0c8dee33dbe2c5c9c046 WHIRLPOOL 93e9969a69e5a50d34dad942c2b3b1b79ac50ab83af6f69f934c2e21174cf5fd824c4ffe963b9091871d970138b9ed133ba1edad184f3ee99e7163eed7f381dd
-EBUILD bitcoind-0.7.2_rc2.ebuild 2912 SHA256 9ed6ac20d01a36f9e872f284c20a72a7292609d4ade4d4699713cec0f3910a71 SHA512 3cf748cace8cfa627f7a236a5ff421590b54cd7e775334ba2b02e54362879da33083c021471a5265e93ca9352b580dad0b56c350996b736df8f8576d57437ba4 WHIRLPOOL 683c1377ca515acaf14968b1fcfa7f76041d384b0bbb9de30055eb496640a9b4b5104d2ba830ba8e401a78a70e6ffcf02f37d3d60276ee9d17d19067b6ba8385
-MISC ChangeLog 14109 SHA256 d18a1ca163a3f020d2e9dc3ca85a55ed1a3e5f9897753fdef7d865f570d5a02e SHA512 609a7464d50990e5919b67a59c22c4e38b0b9e83cfc59f6e5f367794abb2c97d52b1f94953893e89f3022e31d6e324a43f4317f631be71bec86d0d00fe6cebc4 WHIRLPOOL 1f02af6bb09643724f83e5f6ca7e82becaf138be8ea22740007e1c8b3d780fa785123edd32ef97495645cddbb4d6805489159994cded67cecf8a9dc88bbbcb5b
+EBUILD bitcoind-0.7.2.ebuild 2570 SHA256 8fa23d91f1f82b4f1ecf4c996ae5aab60d644672c0bbb36eca9db65d82fd1167 SHA512 09626b9cace251e9265ed2b689c2abc549a05b540982bd30d80d1a7812aeb081c252a6197bc0e9adc15258f58b3b0fd88d5fe24ef66446dad0f4bd10a1830edd WHIRLPOOL 393ba13f3a52666a670cc568b2046741384b16bfdf6165e458894aa42998d598e0e2e73dc61f5777a875af8e987923ca5b69235f71fd09ebdea6ab2e651775af
+EBUILD bitcoind-0.7.2_rc2.ebuild 2574 SHA256 e974cce7cbf6b6960f48993dbcc1a7a0632024432c943a987b516b53143f2724 SHA512 f7270cd1c2756e53b42cb40803b8e7de78cc60b826ab357deb33659aa4b4c33e7c486949f24a6022e11b1b36cc15d07bb29503aebd4f86ce8d41d500dbe02391 WHIRLPOOL 63b0d17dfb605b6b6122df6c9479ab70f0fe46d8c3d0f3b3e83a95a1f1eb8c08f2c924bc0c15c1528d80ceb6877c1a8f7002e3fc5cd821b9098fd1d72836d0a1
+MISC ChangeLog 14325 SHA256 4856d42b7d56b2dd62c78995a6939a3e2a00c367e08ea47f532635ca9a3c74bf SHA512 13d48760faad36ea2211cbe3b0fda85910420efb74a667528acc60d6e96515196bb203ece906a0bc6109711d9100a09700ca7e077f1c277a81503f385f33a1ac WHIRLPOOL 6aaf64035bca1af0ecb0ca269aca054d47b7dbecbde762f5cf6a95a19817f76f26677319529c6ab3c60d061ac0e9f8809a456995b4891cc973a51e11b2c6ab76
 MISC metadata.xml 625 SHA256 8edea8d96fea5c592913f43c394c6c3df669e77b83e4ffb22f3e640ec0fcb7b5 SHA512 22549d289270c766287b75591bd2dcfc06f8bf667c3d596ae9daa64bced4dacf1a321b6f088a96cac19bc6f378aff2a1625f6f9a1a70a56c3cec7e2d0eed7898 WHIRLPOOL 90f4d526923f0d211ed747468fabe0af04bb256a6c7105f17f96f5617c821e09a30b9ec99ff3b75ed7b8e7dc1c703b3b736c88fce935570c08d725ae2ad6e259
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ5j3tAAoJEJOE+m71LUu6tR0P/0YF7CIpGXEUKqWPqnpOl/PS
-WkBg6M1tK8OH1UvjpaoAl2rq5AVf2cydPpkOcFOfBQf5vGR1Qsd3p20zgG45xXpn
-A7MxrlVJjD0KqgAavJ1ZqKF12HHtuHlS3ieRC3HpAl2WdF7RpBHi6ckG2Kx8Yb/C
-oMxkekeFlpzrwwAAt9qdi65545y41OS2jgMrAC9oHxWvZkNv1U6YX8D8QL/gT9o4
-JqRqv7TUdaHisEeBaXMjI1x5JO6cBPQgSVeZGtuVUcqsBnBdJpBJaE1dR5dEbJNg
-LfzP579CR3+hPR+0Sqp2NGuyGMRfiSoYJVqMebNiSofpHMJwCcYHVm4+7acdpiQa
-gtAhctMFfCrHzGXFoyfqfMHOy/UshUX3ZLftDMDCIwDwcqgoqfWG6YY6yaWaECVN
-HHvqLvH5iLaIb9t3yeBBa1o7+fowAv2cf8/0DWKa9L/xOlI1/KPhwT8u+ozKAKSs
-obHQdOIXUzZRe3fiUuSYGmqLobIH95DWU2B+uq6m9AX3XfGQUD/Tyt12Daqyr13x
-csiASQSWR1IqRj7pVYesZuDhh8eP2MQ+3w4I54SGIxflLEIr06m7W5vE9WIY5hNg
-eAw8RU34jTj/f5Q6JMFQBruPCDfT6qcdWwUUojg0P4zhyAIR7O+AFMbjh3ABTaQg
-rH+RJkudkiydL4osm9Z0
-=bdGf
+iQIcBAEBCAAGBQJQ64DrAAoJEJOE+m71LUu6KO8P/2prF2bjGWazXH3CRV+qKqFy
+qi7N7pK1lI3YlI/LSZ/HOOLZ/fIz/Dha1QiYok3iEU8BJitxe6T1kXMRxUrVqYOK
+YwsOtBMeMZnLRcsgpUHhV6JXyZML6r4fgQPQayWb2Amr/RAXOYLFYe+uLdgDm+Uc
+yVx6QAH9LWsTii5B+gsoPZhiA1Yfy1bk9z7eeHzEspD4bCXkDL0Eo0BO42Qz4ogD
+ZLZFaMTH65aM9iqNfhysj4P6fLUp4G37X2sRpBitLy+0C9Hs/1OXzCnyXvwNLFcE
+KKqUxkiY/aB5LkWiFtkQEd1IS3iPVKnk8FCyMzX64CPE9n+GPJGhFwt6J588z1be
+usCzFINzkONAC5SC++lzOxB4ImnPX872RlKkNyurPzEYYCnrZ08YuHFwsSludvXq
+4a0zNObJZbRUcLcuPk86/41IadrGxEhiHbliiej8MWx8589p1yXceNVUQj9z9An7
+hB6bQZ5DPgVKK+oOABrAyKEA7z7WXJKOPvepezRYe6mqTt3lWwaRpDy8IlmEtlKu
+nMix8TH4w8Okz5rRp8GzPSiSQMpQD4hMpfXlq/s5/A60zma6veD06daw8YaJMtgl
+pnNvdHfmWISBOUWXY0AI7Q4VIFItaJM0jP9nJ/dPJpDDkm1vZ8n2mAzM3vt/aPo5
+OexDFIWKZ0jOLiIiH4rx
+=yV+k
 -----END PGP SIGNATURE-----
