@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/bitcoind
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.53 2013/01/04 02:26:38 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoind/ChangeLog,v 1.54 2013/01/08 02:13:58 blueness Exp $
+
+  08 Jan 2013; Anthony G. Basile <blueness@gentoo.org> bitcoind-0.7.0.ebuild,
+  bitcoind-0.7.2.ebuild, bitcoind-0.7.2_rc2.ebuild:
+  Remove boost versioning for 0.7.*.  They could all probably use it.  Bug
+  #445180
 
 *bitcoind-0.7.2 (04 Jan 2013)
 
